force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Campo responsável por armazenar registros detalhados de erros ocorridos no sistema, incluindo mensagens, códigos de erro, contexto da execução e informações relevantes para diagnóstico e depuração.</description>
    <label>Log de Erro</label>
    <nameField>
        <label>Nome do Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs de Erro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>