force-app/main/default/objects/Error_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Número único gerado automaticamente para identificar cada registro de erro.</description>
    <displayFormat>LOG-{0000}</displayFormat>
    <inlineHelpText>Identificador exclusivo do log, gerado automaticamente pelo sistema.</inlineHelpText>
    <label>Nº do Log</label>
    <type>AutoNumber</type>
</CustomField>