force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <description>Armazena a data e hora exatas em que o erro ocorreu.</description>
    <inlineHelpText>Indica o momento preciso da ocorrência do erro para facilitar rastreamento e auditoria.</inlineHelpText>
    <label>Data/Hora do Log</label>
    <type>DateTime</type>
</CustomField>