force-app/main/default/objects/Error_Log__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <description>Contém o stack trace completo e informações detalhadas sobre o erro.</description>
    <inlineHelpText>Inclui detalhes técnicos do erro, como mensagens e stack trace, para auxiliar na depuração.</inlineHelpText>
    <label>Detalhes do Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>