force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Armazena o nome do processo responsável pelo erro, como uma classe Apex ou trigger.</description>
    <inlineHelpText>Identifica qual processo do sistema gerou o erro.</inlineHelpText>
    <label>Nome do Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>